--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 api_key = 6698ffd967056651db12ee09cfb2a98e
+
+spring.h2.console.enabled = true
+spring.h2.console.path = /console
+spring.datasource.url = jdbc:h2:file:~/Documents/weatherapp
+spring.datasource.username = sa
+spring.datasource.password =
+spring.datasource.driver-class-name = org.h2.Driver
